NUTCH-544 - Upgrade Carrot2 clustering plugin to the newest stable release (2.1). Contributed by Dawid Weiss.
git-svn-id: https://svn.eu.apache.org/repos/asf/lucene/nutch/trunk@570327 13f79535-47bb-0310-9956-ffa450edef68